[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"

[tool.poetry.group.linter.dependencies]
ruff = "*"
mypy = "*"


[tool.poetry.group.test.dependencies]
pytest = "*"




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
