[tool.poetry]
name = "annofab_har"
version = "0.1.0" 
description = ""
authors = ["Kurusugawa Computer Inc."]
license = "MIT"
readme="README.md"
repository="https://github.com/kurusugawa-computer/annofab-har"

packages = [
    { include = "ahs" }
]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"

[tool.poetry.group.linter.dependencies]
ruff = "*"
mypy = "*"
types-python-dateutil = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.scripts]
annofab_har = "ahs.__main__:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
