[project]
name = "annofab_har"
version = "0.1.0"
description = ""
authors = [{ name = "Kurusugawa Computer Inc." }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = ["pandas"]

[project.urls]
Repository = "https://github.com/kurusugawa-computer/annofab-har"

[project.scripts]
annofab_har = "ahs.__main__:main"

[dependency-groups]
linter = [
    "ruff",
    "mypy",
    "types-python-dateutil",
]
test = ["pytest"]

[tool.uv]
default-groups = [
    "linter",
    "test",
]

[tool.hatch.build.targets.sdist]
include = ["ahs"]

[tool.hatch.build.targets.wheel]
include = ["ahs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
